--- a/Classes/ImageTaggerViewController.xib
+++ b/Classes/ImageTaggerViewController.xib
@@ -12,7 +12,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="10"/>
+			<integer value="11"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -97,7 +97,54 @@
 						</object>
 						<string key="NSFrameSize">{512, 352}</string>
 						<reference key="NSSuperview" ref="766721923"/>
-						<object class="NSColor" key="IBUIBackgroundColor" id="267471670">
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MCAxIDEAA</bytes>
+						</object>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+					</object>
+					<object class="IBUIView" id="56113634">
+						<reference key="NSNextResponder" ref="766721923"/>
+						<int key="NSvFlags">307</int>
+						<object class="NSMutableArray" key="NSSubviews">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBUIImageView" id="773948959">
+								<reference key="NSNextResponder" ref="56113634"/>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrameSize">{512, 352}</string>
+								<reference key="NSSuperview" ref="56113634"/>
+								<int key="IBUIContentMode">1</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+							</object>
+						</object>
+						<string key="NSFrame">{{512, 0}, {512, 352}}</string>
+						<reference key="NSSuperview" ref="766721923"/>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MSAwIDEAA</bytes>
+						</object>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+					</object>
+					<object class="IBUIView" id="672043798">
+						<reference key="NSNextResponder" ref="766721923"/>
+						<int key="NSvFlags">286</int>
+						<object class="NSMutableArray" key="NSSubviews">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBMKMapView" id="29615840">
+								<reference key="NSNextResponder" ref="672043798"/>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrameSize">{512, 352}</string>
+								<reference key="NSSuperview" ref="672043798"/>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<bool key="IBUIMultipleTouchEnabled">YES</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<int key="IBMKMapType">2</int>
+							</object>
+						</object>
+						<string key="NSFrame">{{0, 350}, {512, 352}}</string>
+						<reference key="NSSuperview" ref="766721923"/>
+						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">10</int>
 							<object class="NSImage" key="NSImage">
 								<int key="NSImageFlags">549453824</int>
@@ -4495,46 +4542,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						</object>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
-					<object class="IBUIView" id="56113634">
-						<reference key="NSNextResponder" ref="766721923"/>
-						<int key="NSvFlags">307</int>
-						<object class="NSMutableArray" key="NSSubviews">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIImageView" id="773948959">
-								<reference key="NSNextResponder" ref="56113634"/>
-								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{512, 352}</string>
-								<reference key="NSSuperview" ref="56113634"/>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-							</object>
-						</object>
-						<string key="NSFrame">{{512, 0}, {512, 352}}</string>
-						<reference key="NSSuperview" ref="766721923"/>
-						<reference key="IBUIBackgroundColor" ref="267471670"/>
-						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-					</object>
-					<object class="IBUIView" id="672043798">
-						<reference key="NSNextResponder" ref="766721923"/>
-						<int key="NSvFlags">286</int>
-						<object class="NSMutableArray" key="NSSubviews">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBMKMapView" id="29615840">
-								<reference key="NSNextResponder" ref="672043798"/>
-								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{512, 352}</string>
-								<reference key="NSSuperview" ref="672043798"/>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<bool key="IBUIMultipleTouchEnabled">YES</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<int key="IBMKMapType">2</int>
-							</object>
-						</object>
-						<string key="NSFrame">{{0, 350}, {512, 352}}</string>
-						<reference key="NSSuperview" ref="766721923"/>
-						<reference key="IBUIBackgroundColor" ref="267471670"/>
-						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-					</object>
 					<object class="IBUIView" id="1030763069">
 						<reference key="NSNextResponder" ref="766721923"/>
 						<int key="NSvFlags">283</int>
@@ -4551,13 +4558,16 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						</object>
 						<string key="NSFrame">{{512, 350}, {512, 352}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
-						<reference key="IBUIBackgroundColor" ref="267471670"/>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MSAxIDAAA</bytes>
+						</object>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
 					<object class="IBUIToolbar" id="681197530">
 						<reference key="NSNextResponder" ref="766721923"/>
 						<int key="NSvFlags">266</int>
-						<string key="NSFrame">{{0, 702}, {1024, 44}}</string>
+						<string key="NSFrame">{{0, 704}, {1024, 44}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -4923,7 +4933,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="NSAffineTransform">
 						<bytes key="NSTransformStruct">P4AAAL+AAABD9gAAxCoAAA</bytes>
 					</object>
-					<string>{{132, 4}, {1024, 748}}</string>
+					<string>{{-121, 49}, {1039, 707}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
@@ -4940,7 +4950,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABBoAAAw7kAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAAAAAAAAw68AAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
@@ -5037,6 +5047,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<string>corner1</string>
 							<string>corner2</string>
 							<string>corner3</string>
+							<string>delegate</string>
 							<string>elevationBackgroundView</string>
 							<string>facadeThumbnail</string>
 							<string>mapView</string>
@@ -5055,6 +5066,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<string>UIImageView</string>
 							<string>UIImageView</string>
 							<string>UIImageView</string>
+							<string>id</string>
 							<string>UIImageView</string>
 							<string>UIImage</string>
 							<string>MKMapView</string>
@@ -5076,6 +5088,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<string>corner1</string>
 							<string>corner2</string>
 							<string>corner3</string>
+							<string>delegate</string>
 							<string>elevationBackgroundView</string>
 							<string>facadeThumbnail</string>
 							<string>mapView</string>
@@ -5105,6 +5118,10 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<object class="IBToOneOutletInfo">
 								<string key="name">corner3</string>
 								<string key="candidateClassName">UIImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">delegate</string>
+								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">elevationBackgroundView</string>
@@ -5439,7 +5456,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="NS.key.0">magentaDot.png</string>
-			<string key="NS.object.0">{38, 38}</string>
+			<string key="NS.object.0">{40, 40}</string>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">132</string>
 	</data>
